--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -133,8 +133,18 @@ keypoint_proposer:
   bounds_max: *bounds_max
   seed: *seed
 
+# constraint_generator:
+#   model: chatgpt-4o-latest
+#   temperature: 0.0
+#   max_tokens: 4096
+
+# constraint_generator:
+#   model: qwen2.5-vl-72b-instruct
+#   temperature: 0.0
+#   max_tokens: 2048
+
 constraint_generator:
-  model: chatgpt-4o-latest
+  model: qwen3-vl-plus-2025-12-19
   temperature: 0.0
   max_tokens: 4096
 
